# cargo-clean-artifact

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: analyse.rs  clean.rs  cli.rs  crate_deps.rs  git.rs  main.rs  theme.rs  trace_parser.rs
src/clean/: display.rs  mod.rs  prompt.rs  scan.rs  stats.rs
src/cli/: mod.rs
src/cli/clean/: cargo.rs  mod.rs
src/util/: mod.rs
tests/: idempotent_clean_test.rs  trace_clean_test.rs
tests/common/: mod.rs
