[package]
authors = ["Tin Lai <tin@tinyiu.com>"]
description = "Clean old cargo build artifacts / deps that are not used in any workspace features"
edition = "2024"
license = "MIT"
name = "cargo-clean-artifact"
repository = "https://github.com/soraxas/cargo-clean-artifact.git"
version = "0.1.2"

[dependencies]

anyhow = { version = "1.0.86", default-features = false }
# lightweight ANSI styling
anstyle = { version = "1.0.0", default-features = false }
cargo_metadata = { version = "0.15.2", default-features = false }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
semver = { version = "1.0.27", default-features = false }
tokio = { version = "1.22.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "sync",
] }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
log = "0.4.29"

[profile.release]
lto = "off"
# Strip debug symbols
# strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
