[package]
authors = ["Tin Lai <tin@tinyiu.com>"]
description = "Clean old cargo build artifacts / deps that are not used in any workspace features"
edition = "2024"
license = "MIT"
name = "cargo-clean-artifact"
repository = "https://github.com/soraxas/cargo-clean-artifact.git"
version = "0.1.3"

[dependencies]

anyhow = { version = "1.0.86", default-features = false }
# lightweight ANSI styling
anstyle = { version = "1.0.0", default-features = false }
cargo_metadata = { version = "0.15.2", default-features = false }
clap = { version = "4.0.29", features = ["derive", "color"] }
dialoguer = "0.11"
env_logger = "0.11"
futures = "0.3.25"
console = "0.15"
indicatif = "0.17"
log = "0.4.29"
semver = { version = "1.0.27", default-features = false }
serde_json = "1.0"
tokio = { version = "1.22.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "sync",
    "io-util",
] }

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
fs-err = "2.11"

[profile.release]
lto = "off"
# Strip debug symbols
# strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
